@startuml
left to right direction
skinparam classAttributeIconSize 0

package "Session Logic" {

    class GameSessionFacade {
        +start(races, players)
        +run()
        +onPlayerEvent(...)
        +getSnapshot()
        +getStaticSnapshot()
        +stop()
    }

    class MatchSession {
        +start()
        +update(dt)
        +applyInput(id,input)
        +queueUpgrades(...)
        +getSnapshot()
        +getStaticSnapshot()
        +lastRaceResults()
    }

    class RaceSession {
        +start()
        +update(dt)
        +isFinished()
        +makeResults()
        +nextCheckpointFor(player)
        +onCheckpointCrossed(player,order)
        +onCarDestroyed(player)
    }
}

package "Model" {
    class Player
    class Car
}

package "Physics" {
    class Box2DPhysicsWorld
}

package "Config" {
    class YamlGameConfig
}

' =============================
' RELACIONES DE ALTA IMPORTANCIA
' =============================

GameSessionFacade *-- MatchSession
GameSessionFacade --> Box2DPhysicsWorld : <<updates>>
GameSessionFacade --> YamlGameConfig : <<reads>>

MatchSession *-- RaceSession
MatchSession --> Player : <<manages>>
MatchSession --> Car : <<spawns>>

RaceSession --> Car : <<moves>>
RaceSession --> Player : <<tracks>>

RaceSession --> Box2DPhysicsWorld : <<uses>>

@enduml
